# Cybervault2

./: .gitignore  cybervault_launcher.py  index.html  package-lock.json  package.json  s  vite.config.js
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  vault.rs
src/components/: AuditLog.jsx  Dashboard.jsx  DiagBot.jsx  FileList.jsx  LockScreen.jsx  MediaViewer.jsx  NavTabs.jsx  NoteEditor.jsx  SearchBar.jsx  Settings.jsx  Sidebar.jsx  TitleBar.jsx  VaultGrid.jsx  VirtualGrid.jsx
src/hooks/: useThumbnails.js  videoThumb.js
src/styles/: app.css  global.css
