[package]
name = "cybervault2"
version = "1.0.0"
description = "CyberVault - Cyberpunk File Hider"
authors = ["CyberVault"]
edition = "2021"

[lib]
name = "cybervault2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
walkdir = "2"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = 3
strip = true
